--- a/style.css
+++ b/style.css
@@ -2,8 +2,31 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Architects Daughter', cursive;
+    font-size: 0.9em;
 }
 
 canvas {
     background-color: black;
 }
+
+.d-none {
+    display: none !important;
+}
+
+.welcome {
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+td {
+    padding: 12px;
+}
+
+.span {
+    margin-bottom: 12px;
+}
+
