--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: 'Architects Daughter', cursive;
-    font-size: 0.9em;
+    
 }
 
 canvas {
@@ -15,7 +15,7 @@ canvas {
 }
 
 .welcome {
-    
+    max-width: 720px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,3 +30,19 @@ td {
     margin-bottom: 12px;
 }
 
+.button {
+    margin-top: 12px;
+    margin-bottom: 32px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    background-color: red;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.button:hover {
+    transition: all 1s ease-out;
+    background-color: green;
+}
