--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@ body {
 
 canvas {
     background-color: black;
+    margin-top: 32px;
 }
 
 .d-none {
     display: none !important;
 }
 
-.welcome {
+.begin {
     max-width: 720px;
     display: flex;
     flex-direction: column;
@@ -32,7 +33,7 @@ td {
 
 .button {
     margin-top: 12px;
-    margin-bottom: 32px;
+    margin-bottom: 12px;
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 16px;
@@ -40,9 +41,30 @@ td {
     background-color: red;
     border-radius: 8px;
     cursor: pointer;
+    text-align: center;
 }
 
 .button:hover {
     transition: all 1s ease-out;
     background-color: green;
+}
+
+.startScreen {
+    width: 720px;
+    height: 480px;
+    margin-top: 32px;
+    margin-bottom: 16px;
+}
+
+.reload-button {
+    color: white;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    background-color: red;
+    border-radius: 8px;
+    text-align: center;
 }
