--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@ canvas {
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+.informationArea {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 8px;
     padding-left: 8px;
     padding-right: 8px;
 }
