--- a/style.css
+++ b/style.css
@@ -16,6 +16,41 @@ canvas {
     display: block;
 }
 
+.left {
+    position: absolute;
+    left: 8px;
+    bottom: 8px;
+    z-index: 10;
+}
+
+.jump {
+    position: absolute;
+    left: 16px;
+    bottom: 8px;
+    z-index: 10;
+}
+
+.right {
+    position: absolute;
+    left: 24px;
+    bottom: 8px;
+    z-index: 10;
+}
+
+.A {
+    position: absolute;
+    right: 24px;
+    bottom: 24px;
+    z-index: 10;
+}
+
+.B {
+    position: absolute;
+    right: 12px;
+    bottom: 36px;
+    z-index: 10;
+}
+
 .d-none {
     display: none !important;
 }
@@ -73,15 +108,16 @@ td {
 }
 
 .reload-button {
+    font-size: 0.8em;
     color: white;
-    margin-top: 12px;
-    margin-bottom: 12px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 8px;
+    padding-right: 8px;
     background-color: red;
-    border-radius: 8px;
+    border-radius: 4px;
     text-align: center;
     cursor: pointer;
 }
