--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Architects Daughter', cursive;
+    font-family: Arial, Helvetica, sans-serif;
+    /*'Architects Daughter', cursive;*/
 }
 
 .canvas-area {
